argocd: kops with sops using age

--- a/apps/argocd/argocd/config.yaml
+++ b/apps/argocd/argocd/config.yaml
@@ -4,3 +4,4 @@ metadata:
   name: argocd-cm
 data:
   application.resourceTrackingMethod: annotation
+  kustomize.buildOptions: "--enable-alpha-plugins --enable-exec"
