--- a/apps/monitoring/kube-prometheus-stack/values.yaml
+++ b/apps/monitoring/kube-prometheus-stack/values.yaml
@@ -1,10 +1,10 @@
 kube-prometheus-stack:
   # NOTE: These must be set manually to the control plane IP addresses
-  #kubeEtcd:
-  #  endpoints:
-  #    - x.y.z.a
-  #    - x.y.z.b
-  #    - x.y.z.c
+  kubeEtcd:
+    endpoints:
+      - 192.168.4.54
+      - 192.168.4.53
+      - 192.168.4.56
   kubeControllerManager:
     service:
       selector:
